--- a/premios-esland/src/i18n/es.json
+++ b/premios-esland/src/i18n/es.json
@@ -21,5 +21,23 @@
   "HEADER_VOTE": "VOTA",
   "HEADER_INFO": "INFO",
   "HEADER_ARCHIVE": "ARCHIVO",
-  "HEADER_BUTTON": "CRITERIOS DE NOMINACIÓN"
+  "HEADER_BUTTON": "CRITERIOS DE NOMINACIÓN",
+  "FOOTER": {
+    "DISCLAIMER": "Todos los derechos reservados. - Esta no es la web oficial, desarrollada por @midudev para fines educativos",
+    "LEGAL": {
+      "TITLE": "Legal",
+      "NOTICE": "Aviso Legal",
+      "PRIVACY": "Privacidad",
+      "COOKIES": "Cookies",
+      "PRIVACY_POLICY": "Política de Privacidad",
+      "TOS": "Términos y Condiciones"
+    },
+    "WEB_MAP": {
+      "TITLE": "Mapa Web",
+      "HOME": "Inicio",
+      "INFO": "Info",
+      "ARCHIVE": "Archivo"
+    },
+    "PRODUCED_BY": "Producido por"
+  }
 }
