✨ Feat: add info & archivo page

--- a/premios-esland/src/i18n/ca.json
+++ b/premios-esland/src/i18n/ca.json
@@ -19,7 +19,7 @@
   "VIDEO_ALT": "ESLAND - Premis a la comunitat hispanoparlant de Streaming",
   "VIDEO_BUTTON": "Vota",
   "PREFOOTER_VIDEO_TITLE": "Guia de la 3a Edició dels premis ESLAND",
-  "HEADER_VOTE": "VOTA",
+  "HEADER_FINALISTS": "FINALISTES",
   "HEADER_INFO": "INFO",
   "HEADER_ARCHIVE": "ARXIU",
   "HEADER_BUTTON": "CRITERIS DE NOMINACIÓ",
