--- a/premios-esland/src/i18n/es.json
+++ b/premios-esland/src/i18n/es.json
@@ -18,7 +18,7 @@
   "BENTO_CONTENT_4": "Este año, el reddit no formará parte de las votaciones de los premios, pero sí que <strong>formará parte de la comunidad</strong>. El subreddit oficial de los Premios ESLAND está abierto para ti. Comparte tus clips, opiniones e <strong>interactúa con toda la comunidad</strong> del streaming hispanohablante.",
   "VIDEO_ALT": "ESLAND - Premios a la comunidad hispanohablante de Streaming",
   "PREFOOTER_VIDEO_TITLE": "Guía de la 3ª Edición de los premios ESLAND",
-  "HEADER_VOTE": "VOTA",
+  "HEADER_FINALISTS": "FINALISTAS",
   "HEADER_INFO": "INFO",
   "HEADER_ARCHIVE": "ARCHIVO",
   "HEADER_BUTTON": "CRITERIOS DE NOMINACIÓN",
